--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 
+{% block title %}
+  {{ super() }} - {{ title }}
+{% endblock %}
+
 {% block content %}
   <div class="container justify-content-center">
-    <h2>
-      {{ title }}
-    </h2>
   </div>
   <div class="container">
     <div class="row row-cols">
