--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block title %}
-{{ title }}
+  {{ super() }} - {{ title }}
 {% endblock %}
 
-{% block content%}
+{% block content %}
 {% endblock %}
