--- a/templates/404.html
+++ b/templates/404.html
@@ -1,11 +1,8 @@
 {% extends 'base.html' %}
+
 {% block content %}
   <div class="container pt-4">
-    <p>
-      Oops! Page not found...<br>{{ url }}
-    </p>
-    <p>
-      <a href="{{ url_for('index') }}">Попробуйте вернуться на главную</a>
-    </p>
+    <p>Oops! Page not found...<br>{{ url }}</p>
+    <p><a href="{{ url_for('index') }}">Попробуйте вернуться на главную</a></p>
   </div>
 {% endblock %}
