--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
         content="width=device-width, initial-scale=1.0">
   <title>
     {% block title %}
-      {{ title }}
+      ArtCentre
     {% endblock %}
   </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-
 {% block header %}
   <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
     <div class="container-fluid">
@@ -25,18 +24,11 @@
               aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse ps-4" id="navbarsExample04">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Главная</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('item_card') }}">Магазин</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="{{ url_for('auction') }}" aria-disabled="true">Аукцион</a>
-          </li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Главная</a></li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ url_for('item_card') }}">Магазин</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{{ url_for('auction') }}" aria-disabled="true">Аукцион</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Еще...</a>
             <ul class="dropdown-menu">
@@ -46,7 +38,8 @@
           </li>
         </ul>
         {% if user %}
-          <div class="d-flex pe-4">Login: {{ user }} </div><a href="/logout/" class="btn btn-sm btn-primary me-4">LOGOUT</a>
+          <div class="d-flex pe-4 "><strong><u>{{ user }}</u></strong></div>
+          <a href="/logout/" class="btn btn-sm btn-primary me-4">LOGOUT</a>
         {% else %}
           <a href="/sign-in/" class="btn btn-sm btn-primary me-4">SIGN IN</a>
         {% endif %}
@@ -64,13 +57,10 @@
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="{{ url_for('index') }}" class="nav-link px-2 text-body-secondary">Главная</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Магазин</a></li>
-        <li class="nav-item"><a href="{{ url_for('auction') }}" class="nav-link px-2 text-body-secondary">Аукцион</a>
-        </li>
+        <li class="nav-item"><a href="{{ url_for('auction') }}" class="nav-link px-2 text-body-secondary">Аукцион</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">ЧАВО</a></li>
-        <li class="nav-item"><a href="{{ url_for('about') }}" class="nav-link px-2 text-body-secondary">Информация</a>
-        </li>
-        <li class="nav-item"><a href="{{ url_for('contact') }}" class="nav-link px-2 text-body-secondary">Контакты</a>
-        </li>
+        <li class="nav-item"><a href="{{ url_for('about') }}" class="nav-link px-2 text-body-secondary">Информация</a></li>
+        <li class="nav-item"><a href="{{ url_for('contact') }}" class="nav-link px-2 text-body-secondary">Контакты</a></li>
       </ul>
       <p class="text-center text-body-secondary">© 2023 Developer, Pavel Volchenko</p>
     </footer>
