--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,13 +1,11 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  {{ title }}
+  {{ super() }} - {{ title }}
 {% endblock %}
 
 {% block content %}
   <div class="container">
-    <h2>
-      Контактная информация
-    </h2>
+    <h2>Контактная информация</h2>
   </div>
 {% endblock %}
