--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -5,37 +5,123 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container mt-5">
-    <form method="post">
-      {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-          {% for category, message in messages %}
-            <div class="alert alert-{{ category }}">
-              {{ message }}
-            </div>
-          {% endfor %}
-          {% else %}
-          <p class="text col-10 text-center">Форма для cookies</p>
-        {% endif %}
-      {% endwith %}
-      <div class="mb-3 row">
-        <label for="username" class="col-sm-3 col-form-label text-end">Login</label>
-        <div class="col-sm-5">
-          <input type="text" class="form-control plain-text" name="username" id="username" placeholder="name">
-        </div>
-      </div>
-      <div class="mb-3 row">
-          <label for="email" class="col-sm-3 col-form-label text-end">Email address</label>
-        <div class="col-sm-5">
-          <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com">
-          <div id="emailHelp" class="form-text text-end">
-            We'll never share your email with anyone else.
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 mx-auto">
-        <button type="submit" class="btn btn-primary mx-end">Submit</button>
-      </div>
+  <div class="container">
+
+    <form method="POST" action="{{ url_for('sign_in') }}">
+      {{ form.csrf_token }}
+      {% for field in form if field.name != 'csrf_token' %}
+        <p>
+          {{ field.label }}<br>
+          {{ field }}
+          {% if field.errors %}
+            <ul class="alert alert-danger">
+              {% for error in field.errors %}
+              <li>{{ error }}</li>
+            {% endfor %}
+            </ul>
+          {% endif %}
+        </p>
+      {% endfor %}
+      <p>
+        <input type="submit" value="Register">
+      </p>
     </form>
+
+    {#  <form class="row g-3 needs-validation" novalidate method="POST">#}
+    {#    <div class="col-md-3">#}
+    {#      <label for="validationCustom01" class="form-label">Имя</label>#}
+    {#      <input type="text" class="form-control" name="first_name" id="validationCustom01" value="Иван" required>#}
+    {#      <div class="valid-feedback">#}
+    {#        Все хорошо!#}
+    {#      </div>#}
+    {#    </div>#}
+    {#    <div class="col-md-3">#}
+    {#      <label for="validationCustom02" class="form-label">Фамилия</label>#}
+    {#      <input type="text" class="form-control" name="last_name" id="validationCustom02" value="Петров" required>#}
+    {#      <div class="valid-feedback">#}
+    {#        Все хорошо!#}
+    {#      </div>#}
+    {#    </div>#}
+    {#    <div class="col-md-3">#}
+    {#      <label for="validationCustomUsername" class="form-label">Эл. почта</label>#}
+    {#      <div class="input-group has-validation">#}
+    {#        <input type="text" class="form-control" name="email" id="validationCustomUsername" aria-describedby="inputGroupPrepend"#}
+    {#               required>#}
+    {#        <div class="invalid-feedback">#}
+    {#          Пожалуйста, выберите имя пользователя.#}
+    {#        </div>#}
+    {#      </div>#}
+    {#    </div>#}
+    {#    <div class="col-md-3">#}
+    {#      <label for="validationCustom03" class="form-label">pass</label>#}
+    {#      <input type="text" class="form-control" name="password" id="validationCustom03" required>#}
+    {#      <div class="invalid-feedback">#}
+    {#        Укажите действующий город.#}
+    {#      </div>#}
+    {#    </div>#}
+    {#    <div class="col-md-3">#}
+    {#      <label for="validationCustom04" class="form-label">pass repeat</label>#}
+    {#      <input type="text" class="form-control" name="password_2" id="validationCustom04" required>#}
+    {#      <div class="invalid-feedback">#}
+    {#        Пожалуйста, выберите корректный город.#}
+    {#      </div>#}
+    {#    </div>#}
+    {#    <div class="col-12">#}
+    {#      <div class="form-check">#}
+    {#        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>#}
+    {#        <label class="form-check-label" for="invalidCheck">#}
+    {#          Примите условия и соглашения#}
+    {#        </label>#}
+    {#        <div class="invalid-feedback">#}
+    {#          Вы должны принять перед отправкой.#}
+    {#        </div>#}
+    {#      </div>#}
+    {#    </div>#}
+    {#    <div class="col-12">#}
+    {#      <button class="btn btn-primary" type="submit">Отправить форму</button>#}
+    {#    </div>#}
+    {#  </form>#}
+    {#  </div>#}
+    {##}
+    {##}
+    {#  <div class="container mt-5">#}
+    {#    <form method="post">#}
+    {#      {% with messages = get_flashed_messages(with_categories=true) %}#}
+    {#        {% if messages %}#}
+    {#          {% for category, message in messages %}#}
+    {#            <div class="alert alert-{{ category }}">#}
+    {#              {{ message }}#}
+    {#            </div>#}
+    {#          {% endfor %}#}
+    {#        {% else %}#}
+    {#          <p class="text col-10 text-center">Форма для cookies</p>#}
+    {#        {% endif %}#}
+    {#      {% endwith %}#}
+    {#      Имя#}
+    {#      Фамилия#}
+    {#      email#}
+    {#      Пароль#}
+    {#      Пароль2#}
+    {#      Пароль зашифрован#}
+    {#      Пользователь сохранен в БД#}
+    {#      <div class="mb-3 row">#}
+    {#        <label for="username" class="col-sm-3 col-form-label text-end">Login</label>#}
+    {#        <div class="col-sm-5">#}
+    {#          <input type="text" class="form-control plain-text" name="username" id="username" placeholder="name">#}
+    {#        </div>#}
+    {#      </div>#}
+    {#      <div class="mb-3 row">#}
+    {#        <label for="email" class="col-sm-3 col-form-label text-end">Email address</label>#}
+    {#        <div class="col-sm-5">#}
+    {#          <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com">#}
+    {#          <div id="emailHelp" class="form-text text-end">#}
+    {#            We'll never share your email with anyone else.#}
+    {#          </div>#}
+    {#        </div>#}
+    {#      </div>#}
+    {#      <div class="col-md-6 mx-auto">#}
+    {#        <button type="submit" class="btn btn-primary mx-end">Submit</button>#}
+    {#      </div>#}
+    {#    </form>#}
   </div>
 {% endblock %}
