--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,7 @@
           <a href="/logout/" class="btn btn-sm btn-primary me-4">LOGOUT</a>
         {% else %}
           <a href="/sign-in/" class="btn btn-sm btn-primary me-4">SIGN IN</a>
+          <a href="/sign-up/" class="btn btn-sm btn-primary me-4">SIGN UP</a>
         {% endif %}
       </div>
     </div>
