--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -5,4 +5,25 @@
 {% endblock %}
 
 {% block content %}
+  <div class="container">
+  <form method="POST" action="{{ url_for('sign_up') }}">
+      {{ form.csrf_token }}
+      {% for field in form if field.name != 'csrf_token' %}
+        <p>
+          {{ field.label }}<br>
+          {{ field }}
+          {% if field.errors %}
+            <ul class="alert alert-danger">
+              {% for error in field.errors %}
+              <li>{{ error }}</li>
+            {% endfor %}
+            </ul>
+          {% endif %}
+        </p>
+      {% endfor %}
+      <p>
+        <input type="submit" value="login">
+      </p>
+    </form>
+  </div>
 {% endblock %}
